styles/navbar.css
a {
    color: #FFFFFF;
    text-decoration: none;
}

nav {
    width: 80%;
}

/* - link under - */

.link-arrow:after {
    content: '';
    background-size: 100% 100%;
    width: 16px;
    height: 12px;
    position: absolute;
    top: 5px;
    right: -28px;
    -webkit-transition: all .4s cubic-bezier(.35, 1, .33, 1);
    transition: all .4s cubic-bezier(.35, 1, .33, 1)
}

.link-arrow:hover:after {
    right: -35px
}

.link-arrow.link-arrow-white:after {
    background-size: 100% 100%
}

.link-arrow-hover:after {
    right: -35px
}

.link {
    display: inline-block;
    position: relative;
    border: none;
    padding-bottom: 4px;
    font-weight: 700;
}

.link:active,
.link:focus,
.link:hover {
    outline: 0
}

.link:before {
    content: '';
    position: absolute;
    left: 0;
    bottom: 0;
    background: none;
    width: 0;
    height: 2px;
    -webkit-transition: all .4s cubic-bezier(.35, 1, .33, 1);
    transition: all .4s cubic-bezier(.35, 1, .33, 1)
}

.link:hover {
    color: #FFFFFF
}

.link:hover:before {
    width: 100%
}

.link-theme:before {
    background: #FE00AA
}

@media only screen and (min-width:180px) {

    /* header   box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1); */

    nav {
        background-color: transparent;
        position: absolute;
        width: 100%;
        height: 100%;
        z-index: 3;
        /* margin-left: 10%;
        margin-right: 10%; */
        /* padding: 20px 0; */
    }

    nav ul {
        margin: 0;
        padding: 0;
        list-style: none;
        overflow: hidden;
        background-color: transparent;
    }

    nav li a {
        display: block;
        padding: 20px 20px 4px 20px;
        text-decoration: none;
    }

    nav li a:hover,
    nav .menu-btn:hover {
        background-color: transparent;
    }

    nav .logo {
        /* margin-left: 10%; */
        display: block;
        float: left;
        padding: 2px 0 2px 10%;
    }

    /* menu */

    nav .menu {
        background-color: #1A1338;
        clear: both;
        max-height: 0;
        transition: max-height .2s ease-out;
    }

    /* menu icon */

    nav .menu-icon {
        cursor: pointer;
        display: inline-block;
        /* float: right; */
        padding: 28px 20px;
        position: relative;
        user-select: none;
        -moz-user-select: none;
        -webkit-user-select: none;
        -ms-user-select: none;
    }

    nav .menu-icon .navicon {
        background: #FFFFFF;
        display: block;
        height: 2px;
        position: relative;
        transition: .2s ease-out;
        width: 18px;
    }

    nav .menu-icon .navicon:before,
    nav .menu-icon .navicon:after {
        background: #FFFFFF;
        content: '';
        display: block;
        height: 100%;
        position: absolute;
        transition: all .2s ease-in-out;
        width: 100%;
    }

    nav .menu-icon .navicon:before {
        top: 5px;
    }

    nav .menu-icon .navicon:after {
        top: -5px;
    }

    /* menu btn */

    nav .menu-btn {
        display: none;
    }

    nav .menu-btn:checked~.menu {
        height: 90%;
        max-height: 100%;
    }

    nav .menu-btn:checked~body{
        margin: 0; 
        height: 100%; 
        overflow-y: hidden;
    }

    nav .menu-btn:checked~.logo {
        background-color: #1A1338;
        width: 100%;
        margin: 0;
        transition: max-height 0.1s ease-in-out;
    }

    nav .menu-btn:checked~.menu-icon .navicon {
        background: transparent;
    }

    nav .menu-btn:checked~.menu-icon .navicon:before {
        transform: rotate(-45deg);
    }

    nav .menu-btn:checked~.menu-icon .navicon:after {
        transform: rotate(45deg);
    }

    nav .menu-btn:checked~.menu-icon:not(.steps) .navicon:before,
    nav .menu-btn:checked~.menu-icon:not(.steps) .navicon:after {
        top: 0;
    }

    nav .menu-btn:checked~ul.social-icons {
        display: flex;
        flex-flow: row nowrap;
        position: absolute;
        bottom: 30px;
        justify-content: center;
        width: 100%;
        transition: .3s ease-in-out;
    }

    nav .menu-icon {
        position: absolute;
        top: 20px;
        right:20px;
    }

    @media (min-width: 915px) {
        nav{
            width: 90%;
            height: auto;
            padding: 20px 0;
            display: flex;
            justify-content: space-between;
            align-items: center;
            background-color: transparent;
        }

        nav li {
            float: left;
        }

        nav li a {
            padding: 20px 0px 0px 0px;
            margin-left: 30px;
        }

        nav .menu {
            clear: none;
            float: right;
            max-height: none;
            background-color: transparent;
        }

        nav .menu-icon {
            display: none;
        }
    }
}

